Update navbar buttons style. Fix headers hidden by top navbar.

--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -391,9 +391,3 @@ div {
 #small-dropdown, #small-dropdown option {
   width: 90%;
 }
-
-/* Big divs wrapping */
-div .section {
-  overflow: auto;
-  overflow-y: hidden;
-}
